--- a/geocoding/package.json
+++ b/geocoding/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payload-plugin-template",
-  "version": "3.0.0-beta.0",
+  "version": "3.0.0",
   "homepage:": "https://payloadcms.com",
   "description": "Payload plugin template",
   "author": "dev@payloadcms.com",
@@ -26,25 +26,25 @@
     "prepublishOnly": "pnpm clean && pnpm build && pnpm copyfiles"
   },
   "peerDependencies": {
-    "next": "15.0.0-canary.173",
-    "payload": "^3.0.0-beta.111"
+    "next": "15.0.0",
+    "payload": "^3.2.2"
   },
   "dependencies": {
-    "@payloadcms/ui": "3.0.0-beta.111",
+    "@payloadcms/ui": "3.2.2",
     "react": "19.0.0-rc-3edc000d-20240926",
     "react-dom": "19.0.0-rc-3edc000d-20240926"
   },
   "devDependencies": {
-    "@payloadcms/eslint-config": "3.0.0-beta.97",
-    "@types/node": "22.7.5",
+    "@payloadcms/eslint-config": "3.0.0",
+    "@types/node": "22.10.1",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "copyfiles": "^2.4.1",
-    "next": "15.0.0-canary.173",
-    "payload": "3.0.0-beta.111",
+    "next": "15.0.0",
+    "payload": "3.2.2",
     "react": "19.0.0-rc-3edc000d-20240926",
     "react-dom": "19.0.0-rc-3edc000d-20240926",
-    "typescript": "5.5.3"
+    "typescript": "5.7.2"
   },
   "pnpm": {
     "overrides": {
