--- a/geocoding/package.json
+++ b/geocoding/package.json
@@ -61,6 +61,11 @@
         "import": "./dist/index.js",
         "types": "./dist/index.d.ts",
         "default": "./dist/index.js"
+      },
+      "./client": {
+        "import": "./dist/exports/client.js",
+        "types": "./dist/exports/client.d.ts",
+        "default": "./dist/exports/client.js"
       }
     }
   },
@@ -69,6 +74,11 @@
       "import": "./src/index.ts",
       "default": "./src/index.ts",
       "types": "./src/index.ts"
+    },
+    "./client": {
+      "import": "./src/exports/client.ts",
+      "default": "./src/exports/client.ts",
+      "types": "./src/exports/client.ts"
     }
   }
 }
