--- a/geocoding/package.json
+++ b/geocoding/package.json
@@ -18,13 +18,12 @@
     "build": "tsc --project tsconfig.json",
     "build:all": "pnpm build && pnpm -C dev build",
     "build:app": "pnpm -C dev build",
-    "clean": "rimraf {dist,*.tsbuildinfo,package}",
     "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
     "dev": "pnpm -C dev dev",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prepack": "pnpm prepublishOnly",
-    "prepublishOnly": "pnpm clean && pnpm build && pnpm copyfiles"
+    "prepublishOnly": "pnpm build && pnpm copyfiles"
   },
   "peerDependencies": {
     "next": "15.0.0",
@@ -58,6 +57,7 @@
     "main": "./dist/index.js",
     "registry": "https://registry.npmjs.org/",
     "types": "./dist/index.d.ts",
+    "access": "public",
     "exports": {
       ".": {
         "import": "./dist/index.js",
