--- a/pages/package.json
+++ b/pages/package.json
@@ -17,15 +17,12 @@
     "prepublish": "tsc"
   },
   "peerDependencies": {
-    "@payloadcms/ui": "^3.2.2",
-    "payload": "^3.2.2"
+    "@payloadcms/ui": "^3.4.0",
+    "payload": "^3.4.0"
   },
   "dependencies": {
-    "react": "^18.3.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1"
+    "react": "19.0.0-rc-3edc000d-20240926",
+    "react-dom": "19.0.0-rc-3edc000d-20240926"
   },
   "files": [
     "dist"
