--- a/pages/package.json
+++ b/pages/package.json
@@ -16,13 +16,17 @@
     "lint": "eslint .",
     "prepublish": "tsc"
   },
+  "dependencies": {},
   "peerDependencies": {
-    "@payloadcms/ui": "^3.4.0",
-    "payload": "^3.4.0"
+    "next": "15.0.0",
+    "@payloadcms/ui": "^3.5.0",
+    "payload": "^3.5.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
-  "dependencies": {
-    "react": "19.0.0-rc-3edc000d-20240926",
-    "react-dom": "19.0.0-rc-3edc000d-20240926"
+  "devDependencies": {
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1"
   },
   "files": [
     "dist"
