chore: add global prettier format script

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "publish:pages": "cd ./pages && pnpm publish",
     "publish:seo": "cd ./seo && pnpm publish",
     "build:geocoding": "cd ./geocoding && pnpm build",
-    "publish:geocoding": "cd ./geocoding && pnpm publish"
+    "publish:geocoding": "cd ./geocoding && pnpm publish",
+    "format": "prettier --write \"**/*.{js,ts,json,md}\""
   }
 }
