--- a/geocoding/package.json
+++ b/geocoding/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhb.software/payload-geocoding-plugin",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Geocoding field plugin for Payload CMS",
   "author": "JHB Software",
   "license": "MIT",
@@ -37,7 +37,8 @@
   },
   "devDependencies": {
     "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.1"
+    "@types/react-dom": "19.0.1",
+    "typescript": "5.7.2"
   },
   "publishConfig": {
     "main": "./dist/index.js",
