--- a/seo/package.json
+++ b/seo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhb.software/payload-seo-plugin",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "SEO plugin for Payload CMS with AI-powered meta descriptions, keyword tracking and content analysis",
   "bugs": "https://github.com/jhb-software/payload-plugins/issues",
   "repository": "https://github.com/jhb-software/payload-plugins",
@@ -29,6 +29,7 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "typescript": "5.7.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1"
   },
