--- a/geocoding/package.json
+++ b/geocoding/package.json
@@ -6,6 +6,11 @@
   "license": "MIT",
   "bugs": "https://github.com/jhb-software/payload-plugins/issues",
   "repository": "https://github.com/jhb-software/payload-plugins",
+  "keywords": [
+    "payload",
+    "plugin",
+    "geocoding"
+  ],
   "files": [
     "dist",
     "LICENSE.md",
