--- a/pages/package.json
+++ b/pages/package.json
@@ -21,18 +21,20 @@
     "lint": "eslint .",
     "prepublish": "tsc"
   },
-  "dependencies": {},
+  "dependencies": {
+    "qs-esm": "^7.0.2"
+  },
   "peerDependencies": {
-    "next": "15.0.0",
     "@payloadcms/ui": "^3.5.0",
+    "next": "15.0.0",
     "payload": "^3.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "typescript": "5.7.2",
     "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.1"
+    "@types/react-dom": "19.0.1",
+    "typescript": "5.7.2"
   },
   "files": [
     "dist"
