--- a/pages/package.json
+++ b/pages/package.json
@@ -55,6 +55,11 @@
         "import": "./dist/exports/client.js",
         "types": "./dist/exports/client.d.ts",
         "default": "./dist/exports/client.js"
+      },
+      "./server": {
+        "import": "./dist/exports/server.js",
+        "types": "./dist/exports/server.d.ts",
+        "default": "./dist/exports/server.js"
       }
     }
   },
@@ -68,6 +73,11 @@
       "import": "./src/exports/client.ts",
       "default": "./src/exports/client.ts",
       "types": "./src/exports/client.ts"
+    },
+    "./server": {
+      "import": "./src/exports/server.ts",
+      "types": "./src/exports/server.d.ts",
+      "default": "./src/exports/server.ts"
     }
   }
 }
