--- a/pages/package.json
+++ b/pages/package.json
@@ -31,16 +31,16 @@
     "qs-esm": "^7.0.2"
   },
   "peerDependencies": {
-    "@payloadcms/ui": "^3.15.1",
-    "next": "15.1.4",
-    "payload": "^3.15.1",
+    "@payloadcms/ui": "3.18.0",
+    "next": "15.1.5",
+    "payload": "3.18.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@types/react": "19.0.3",
-    "@types/react-dom": "19.0.2",
-    "typescript": "5.7.2",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3",
+    "typescript": "5.7.3",
     "copyfiles": "2.4.1",
     "rimraf": "6.0.1"
   },
