style(pages): re-format all files with prettier

--- a/pages/.prettierrc.json
+++ b/pages/.prettierrc.json
@@ -1,6 +1,7 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
   "printWidth": 100,
-  "semi": false
+  "parser": "typescript",
+  "semi": false,
+  "singleQuote": true,
+  "trailingComma": "all"
 }
