feat(pages): add support for unlocalized page collections

--- a/pages/package.json
+++ b/pages/package.json
@@ -21,7 +21,9 @@
     "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
     "clean": "rimraf --glob {dist,*.tsbuildinfo}",
     "dev": "tsc -w",
-    "test": "cd dev && pnpm test",
+    "test": "pnpm test:localized && pnpm test:unlocalized",
+    "test:localized": "cd dev && pnpm test",
+    "test:unlocalized": "cd dev_unlocalized && pnpm test",
     "test:watch": "cd dev && pnpm test:watch",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
