--- a/pages/package.json
+++ b/pages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhb.software/payload-pages-plugin",
-  "version": "0.4.1",
+  "version": "0.5.0-beta.2",
   "description": "Payload CMS plugin that adds essential fields for hierarchical page structure to collections.",
   "bugs": "https://github.com/jhb-software/payload-plugins/issues",
   "repository": "https://github.com/jhb-software/payload-plugins",
@@ -21,7 +21,9 @@
     "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
     "clean": "rimraf --glob {dist,*.tsbuildinfo}",
     "dev": "tsc -w",
-    "test": "cd dev && pnpm test",
+    "test": "pnpm test:localized && pnpm test:unlocalized",
+    "test:localized": "cd dev && pnpm test",
+    "test:unlocalized": "cd dev_unlocalized && pnpm test",
     "test:watch": "cd dev && pnpm test:watch",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
@@ -31,16 +33,16 @@
     "qs-esm": "^7.0.2"
   },
   "peerDependencies": {
-    "@payloadcms/ui": "3.31.0",
-    "next": "15.2.4",
-    "payload": "3.31.0",
+    "@payloadcms/ui": "3.37.0",
+    "next": "15.3.2",
+    "payload": "3.37.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@types/react": "19.0.12",
-    "@types/react-dom": "19.0.4",
-    "typescript": "5.8.2",
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.4",
+    "typescript": "5.8.3",
     "copyfiles": "2.4.1",
     "rimraf": "6.0.1"
   },
