--- a/admin-search/package.json
+++ b/admin-search/package.json
@@ -9,16 +9,6 @@
       "import": "./src/exports/index.ts",
       "types": "./src/exports/index.ts",
       "default": "./src/exports/index.ts"
-    },
-    "./client": {
-      "import": "./src/exports/client.ts",
-      "types": "./src/exports/client.ts",
-      "default": "./src/exports/client.ts"
-    },
-    "./rsc": {
-      "import": "./src/exports/rsc.ts",
-      "types": "./src/exports/rsc.ts",
-      "default": "./src/exports/rsc.ts"
     }
   },
   "main": "./src/exports/index.ts",
@@ -43,17 +33,18 @@
     "prepublishOnly": "pnpm clean && pnpm build",
     "test": "pnpm test:int && pnpm test:e2e",
     "test:e2e": "playwright test",
-    "test:int": "vitest"
+    "test:int": "vitest",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
-    "@payloadcms/db-mongodb": "3.37.0",
-    "@payloadcms/db-postgres": "3.37.0",
-    "@payloadcms/db-sqlite": "3.37.0",
+    "@payloadcms/db-mongodb": "3.45.0",
+    "@payloadcms/db-postgres": "3.45.0",
+    "@payloadcms/db-sqlite": "3.45.0",
     "@payloadcms/eslint-config": "3.9.0",
-    "@payloadcms/next": "3.37.0",
-    "@payloadcms/richtext-lexical": "3.37.0",
-    "@payloadcms/ui": "3.37.0",
+    "@payloadcms/next": "3.45.0",
+    "@payloadcms/richtext-lexical": "3.45.0",
+    "@payloadcms/ui": "3.45.0",
     "@playwright/test": "^1.52.0",
     "@swc-node/register": "1.10.9",
     "@swc/cli": "0.6.0",
@@ -65,10 +56,11 @@
     "eslint": "^9.23.0",
     "eslint-config-next": "15.3.0",
     "graphql": "^16.8.1",
+    "husky": "^9.1.7",
     "mongodb-memory-server": "10.1.4",
     "next": "15.3.0",
     "open": "^10.1.0",
-    "payload": "3.37.0",
+    "payload": "3.45.0",
     "prettier": "^3.4.2",
     "qs-esm": "7.0.2",
     "react": "19.1.0",
@@ -78,10 +70,11 @@
     "sort-package-json": "^2.10.0",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.2"
+    "vitest": "^3.1.2",
+    "@payloadcms/plugin-search": "3.45.0"
   },
   "peerDependencies": {
-    "payload": "^3.37.0"
+    "payload": "^3.45.0"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0",
@@ -93,16 +86,6 @@
         "import": "./dist/exports/index.js",
         "types": "./dist/exports/index.d.ts",
         "default": "./dist/exports/index.js"
-      },
-      "./client": {
-        "import": "./dist/exports/client.js",
-        "types": "./dist/exports/client.d.ts",
-        "default": "./dist/exports/client.js"
-      },
-      "./rsc": {
-        "import": "./dist/exports/rsc.js",
-        "types": "./dist/exports/rsc.d.ts",
-        "default": "./dist/exports/rsc.js"
       }
     },
     "main": "./dist/exports/index.js",
