feat(dev): setup dev environment with collections and seed data

--- a/admin-search/tsconfig.json
+++ b/admin-search/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ES2022"
-    ],
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "rootDir": "./",
     "allowJs": true,
     "skipLibCheck": true,
@@ -20,15 +16,13 @@
     "emitDeclarationOnly": true,
     "target": "ES2022",
     "composite": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "plugins": [
       {
         "name": "next"
       }
-    ],
+    ]
   },
-  "include": [
-    "./src/**/*.ts",
-    "./src/**/*.tsx",
-    "./dev/next-env.d.ts",
-  ],
+  "include": ["./src/**/*.ts", "./src/**/*.tsx", "./dev/next-env.d.ts"]
 }
