--- a/admin-search/tsconfig.json
+++ b/admin-search/tsconfig.json
@@ -6,6 +6,9 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitAny": true,
     "esModuleInterop": true,
     "module": "NodeNext",
     "moduleResolution": "nodenext",
