fix(admin-search): adjust main/types paths to dist

--- a/admin-search/package.json
+++ b/admin-search/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jhb.software/payload-admin-search",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "A global search plugin for the Payload CMS admin panel.",
   "keywords": [
     "payload",
@@ -11,8 +11,8 @@
   "author": "JHB Software",
   "license": "MIT",
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "pnpm copyfiles && pnpm build:types && pnpm build:swc",
     "build:swc": "swc ./src -d ./dist --config-file .swcrc --strip-leading-paths",
@@ -66,14 +66,14 @@
   },
   "exports": {
     ".": {
-      "import": "./src/index.ts",
-      "types": "./src/index.ts",
-      "default": "./src/index.ts"
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     },
     "./client": {
-      "import": "./src/exports/client.ts",
-      "types": "./src/exports/client.ts",
-      "default": "./src/exports/client.ts"
+      "import": "./dist/exports/client.js",
+      "types": "./dist/exports/client.d.ts",
+      "default": "./dist/exports/client.js"
     }
   },
   "engines": {
