--- a/pages/package.json
+++ b/pages/package.json
@@ -34,19 +34,19 @@
     "qs-esm": "^7.0.2"
   },
   "peerDependencies": {
-    "@payloadcms/ui": "3.42.0",
-    "next": "15.3.3",
-    "payload": "3.42.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "@payloadcms/ui": "3.50.0",
+    "next": "15.4.6",
+    "payload": "3.50.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
-    "@types/react": "19.1.7",
-    "@types/react-dom": "19.1.6",
-    "typescript": "5.8.3",
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7",
     "copyfiles": "2.4.1",
     "prettier": "^3.6.2",
-    "rimraf": "6.0.1"
+    "rimraf": "6.0.1",
+    "typescript": "5.9.2"
   },
   "files": [
     "dist"
