feat(pages): add experimental multi tenant support

--- a/pages/package.json
+++ b/pages/package.json
@@ -22,9 +22,10 @@
     "clean": "rimraf --glob {dist,*.tsbuildinfo}",
     "dev": "tsc -w",
     "format": "prettier --write src",
-    "test": "pnpm test:localized && pnpm test:unlocalized",
+    "test": "pnpm test:localized && pnpm test:unlocalized && pnpm test:multi-tenant",
     "test:localized": "cd dev && pnpm test",
     "test:unlocalized": "cd dev_unlocalized && pnpm test",
+    "test:multi-tenant": "cd dev_multi_tenant && pnpm test",
     "test:watch": "cd dev && pnpm test:watch",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
