--- a/pages/package.json
+++ b/pages/package.json
@@ -42,6 +42,8 @@
     "react-dom": "19.1.1"
   },
   "devDependencies": {
+    "@swc/cli": "^0.7.8",
+    "@swc/core": "^1.13.3",
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
     "copyfiles": "2.4.1",
