chore(ai-alt-text): add files array to package.json
- Explicitly define files for npm publication
- Include dist/, README.md, LICENSE, CHANGELOG.md
- Prevents accidental inclusion of src/ or dev/ in published package

--- a/ai-alt-text/package.json
+++ b/ai-alt-text/package.json
@@ -5,6 +5,12 @@
   "keywords": ["payload", "plugin", "ai", "alt-text", "accessibility", "openai"],
   "author": "JHB Software",
   "license": "MIT",
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md",
+    "CHANGELOG.md"
+  ],
   "bugs": "https://github.com/jhb-software/payload-plugins/issues",
   "repository": "https://github.com/jhb-software/payload-plugins",
   "type": "module",
