ci: add ai-alt-text dev environment to PR checks workflow

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -17,13 +17,17 @@ jobs:
           cat << 'EOF' > pages/dev/.env
           ${{ secrets.PAGES_DEV_ENV_FILE }}
           EOF
-          
+
           cat << 'EOF' > pages/dev_unlocalized/.env
           ${{ secrets.PAGES_DEV_UNLOCALIZED_ENV_FILE }}
           EOF
-          
+
           cat << 'EOF' > pages/dev_multi_tenant/.env
           ${{ secrets.PAGES_DEV_MULTI_TENANT_ENV_FILE }}
+          EOF
+
+          cat << 'EOF' > ai-alt-text/dev/.env
+          ${{ secrets.AI_ALT_TEXT_DEV_ENV_FILE }}
           EOF
         
       - name: Setup Node.js
