fix: update TypeScript annotations for ai-alt-text build compatibility
- Change @ts-expect-error to @ts-ignore in generateAltText and bulkUpdateAltTexts
- Add ai-alt-text plugin to root package.json scripts (build, publish, format, install, test)
- Ensures plugin builds successfully with TypeScript 5.8.2

--- a/package.json
+++ b/package.json
@@ -3,31 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build:all": "pnpm build:cloudinary && pnpm build:pages && pnpm build:seo && pnpm build:geocoding",
+    "build:all": "pnpm build:ai-alt-text && pnpm build:cloudinary && pnpm build:pages && pnpm build:seo && pnpm build:geocoding",
+    "build:ai-alt-text": "cd ./ai-alt-text && pnpm build",
     "build:cloudinary": "cd ./cloudinary && pnpm build",
-    "build:geocoding": "cd ./geocoding && pnpm build", 
+    "build:geocoding": "cd ./geocoding && pnpm build",
     "build:pages": "cd ./pages && pnpm build",
     "build:seo": "cd ./seo && pnpm build",
-    
-    "publish:all": "pnpm publish:cloudinary && pnpm publish:pages && pnpm publish:seo && pnpm publish:geocoding",
+
+    "publish:all": "pnpm publish:ai-alt-text && pnpm publish:cloudinary && pnpm publish:pages && pnpm publish:seo && pnpm publish:geocoding",
+    "publish:ai-alt-text": "cd ./ai-alt-text && pnpm publish",
     "publish:cloudinary": "cd ./cloudinary && pnpm publish",
     "publish:geocoding": "cd ./geocoding && pnpm publish",
     "publish:pages": "cd ./pages && pnpm publish",
     "publish:seo": "cd ./seo && pnpm publish",
-   
-    "format:all": "pnpm format:cloudinary && pnpm format:geocoding && pnpm format:pages && pnpm format:seo",
+
+    "format:all": "pnpm format:ai-alt-text && pnpm format:cloudinary && pnpm format:geocoding && pnpm format:pages && pnpm format:seo",
+    "format:ai-alt-text": "cd ./ai-alt-text && pnpm format",
     "format:cloudinary": "cd ./cloudinary && pnpm format",
     "format:geocoding": "cd ./geocoding && pnpm format",
     "format:pages": "cd ./pages && pnpm format",
     "format:seo": "cd ./seo && pnpm format",
-    
-    "install:all": "pnpm install:cloudinary && pnpm install:geocoding && pnpm install:pages && pnpm install:seo",
+
+    "install:all": "pnpm install:ai-alt-text && pnpm install:cloudinary && pnpm install:geocoding && pnpm install:pages && pnpm install:seo",
+    "install:ai-alt-text": "cd ./ai-alt-text && pnpm install --frozen-lockfile",
     "install:cloudinary": "cd ./cloudinary && pnpm install --frozen-lockfile",
     "install:geocoding": "cd ./geocoding && pnpm install --frozen-lockfile",
     "install:pages": "cd ./pages && pnpm install --frozen-lockfile",
     "install:seo": "cd ./seo && pnpm install --frozen-lockfile",
-    
-    "test:all": "pnpm test:pages",
+
+    "test:all": "pnpm test:ai-alt-text && pnpm test:pages",
+    "test:ai-alt-text": "cd ./ai-alt-text/dev && pnpm test",
     "test:pages": "cd ./pages && pnpm test"
   }
 }
