build(ai-alt-text): remove SWC and switch to TypeScript-only compilation
- Remove SWC configuration and dependencies
- Update build scripts to use TypeScript compiler directly
- Add copyfiles for non-TS assets
- Add test scripts for vitest integration
- Align scripts with geocoding plugin structure (build:all, build:app, dev, prepack)

--- a/ai-alt-text/package.json
+++ b/ai-alt-text/package.json
@@ -2,14 +2,20 @@
   "name": "@jhb.software/payload-ai-alt-text-plugin",
   "version": "0.1.0",
   "description": "AI-powered alt text generation plugin for Payload CMS using OpenAI Vision API",
-  "keywords": ["payload", "plugin", "ai", "alt-text", "accessibility", "openai"],
+  "keywords": [
+    "payload",
+    "plugin",
+    "ai",
+    "alt-text",
+    "accessibility",
+    "openai"
+  ],
   "author": "JHB Software",
   "license": "MIT",
   "files": [
     "dist",
-    "LICENSE",
-    "README.md",
-    "CHANGELOG.md"
+    "LICENSE.md",
+    "README.md"
   ],
   "bugs": "https://github.com/jhb-software/payload-plugins/issues",
   "repository": "https://github.com/jhb-software/payload-plugins",
@@ -17,21 +23,23 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
-    "build": "pnpm copyfiles && pnpm build:types && pnpm build:swc",
-    "build:swc": "swc ./src -d ./dist --config-file .swcrc --strip-leading-paths",
-    "build:types": "tsc --outDir dist --rootDir ./src",
-    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
-    "clean": "rimraf --glob {dist,*.tsbuildinfo}",
-    "dev": "tsc -w",
+    "build": "tsc --project tsconfig.json",
+    "build:all": "pnpm build && pnpm -C dev build",
+    "build:app": "pnpm -C dev build",
+    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
+    "dev": "pnpm -C dev dev",
     "format": "prettier --write src",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix",
-    "prepublishOnly": "pnpm clean && pnpm build"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prepack": "pnpm prepublishOnly",
+    "prepublishOnly": "pnpm build && pnpm copyfiles",
+    "test": "pnpm -C dev test",
+    "test:watch": "pnpm -C dev test:watch"
   },
   "dependencies": {
     "openai": "^5.9.1",
-    "zod": "^3.24.1",
-    "p-map": "^7.0.3"
+    "p-map": "^7.0.3",
+    "zod": "^4.0.5"
   },
   "peerDependencies": {
     "@payloadcms/ui": "^3.27.0",
@@ -41,14 +49,11 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@swc/cli": "^0.7.8",
-    "@swc/core": "^1.13.3",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
-    "copyfiles": "2.4.1",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "copyfiles": "^2.4.1",
     "prettier": "^3.6.2",
-    "rimraf": "6.0.1",
-    "typescript": "5.8.2"
+    "typescript": "5.9.3"
   },
   "exports": {
     ".": {
