feat(ai-alt-text): pass OpenAI API key through plugin config
- Add openAIApiKey field to AltTextPluginConfig type
- Remove environment variable dependency for API key
- Update plugin initialization to validate API key from config
- Update generateAltText action to use config API key
- Update bulkUpdateAltTexts action to use config API key
- Update dev environment config to pass API key through plugin options
- Update tests to verify API key is passed through config
- Clean up .env.example to reflect config-based approach

This change makes the plugin more flexible and explicit by passing
API keys through the configuration instead of relying on environment
variables directly in the plugin code.

--- a/ai-alt-text/dev/.env.example
+++ b/ai-alt-text/dev/.env.example
@@ -5,7 +5,8 @@ DATABASE_URI=mongodb://127.0.0.1:27017/ai-alt-text-dev
 PAYLOAD_SECRET=your-secret-key-change-in-production
 
 # OpenAI API
-# For development, can be any value since tests mock the API
+# Required for the AI Alt Text plugin - passed via plugin config
+# For development/tests, can be any value since tests mock the API
 # For manual testing with real API, use real key
 OPENAI_API_KEY=test-key-or-real-api-key
 
@@ -13,11 +14,8 @@ OPENAI_API_KEY=test-key-or-real-api-key
 # URL where images are served from (for thumbnail URL generation)
 NEXT_PUBLIC_CMS_URL=http://localhost:3000
 
-# Model to use for generation (optional - defaults to gpt-4o-mini)
-NEXT_PUBLIC_OPENAI_MODEL=gpt-4o-mini
-
-# Max concurrent requests for bulk generation (optional - defaults to plugin config)
-OPENAI_CONCURRENCY=5
+# Note: Model and concurrency settings are configured via the plugin options
+# in payload.config.ts, not via environment variables
 
 # Next.js
 NODE_ENV=development
