--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -34,6 +34,7 @@ jobs:
             test
           scopes: |
             admin-search
+            alt-text
             cloudinary
             geocoding
             pages
