chore(alt-text): add dev_unlocalized to workspace configuration

--- a/alt-text/pnpm-workspace.yaml
+++ b/alt-text/pnpm-workspace.yaml
@@ -1,3 +1,4 @@
 packages:
   - './' # Plugin at the root
   - 'dev/' # Testing environment
+  - 'dev_unlocalized/' # Testing environment without localization
