--- a/alt-text/package.json
+++ b/alt-text/package.json
@@ -29,25 +29,25 @@
     "prepublishOnly": "pnpm clean && pnpm build"
   },
   "dependencies": {
-    "openai": "^6.6.0",
+    "openai": "^6.7.0",
     "p-map": "^7.0.3",
     "zod": "^4.1.12"
   },
   "peerDependencies": {
-    "@payloadcms/ui": "^3.60.0",
+    "@payloadcms/ui": "3.62.0",
     "next": "15.5.6",
-    "payload": "^3.60.0",
+    "payload": "3.62.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.7.8",
-    "@swc/core": "^1.13.3",
+    "@swc/core": "^1.14.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "copyfiles": "2.4.1",
     "prettier": "^3.6.2",
-    "rimraf": "6.0.1",
+    "rimraf": "6.1.0",
     "typescript": "5.9.3"
   },
   "files": [
