chore(*): upgrade Payload to 3.62.1 in all plugins

--- a/admin-search/package.json
+++ b/admin-search/package.json
@@ -27,23 +27,23 @@
     "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@payloadcms/ui": "3.62.0",
+    "@payloadcms/ui":  "^3.62.1",
     "next": "15.5.6",
-    "payload": "3.62.0",
+    "payload":  "^3.62.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@payloadcms/eslint-config": "^3.28.0",
-    "@swc/cli": "^0.7.8",
-    "@swc/core": "^1.14.0",
-    "@types/react": "~19.2.2",
-    "@types/react-dom": "~19.2.2",
+    "@swc/cli": "^0.7.9",
+    "@swc/core": "^1.15.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "copyfiles": "^2.4.1",
-    "eslint": "~9.39.0",
+    "eslint": "^9.39.1",
     "prettier": "^3.6.2",
     "rimraf": "^6.1.0",
-    "typescript": "~5.9.3"
+    "typescript": "^5.9.3"
   },
   "files": [
     "dist"
