--- a/alt-text/package.json
+++ b/alt-text/package.json
@@ -29,20 +29,20 @@
     "prepublishOnly": "pnpm clean && pnpm build"
   },
   "dependencies": {
-    "openai": "^6.7.0",
+    "openai": "^6.8.1",
     "p-map": "^7.0.3",
     "zod": "^4.1.12"
   },
   "peerDependencies": {
-    "@payloadcms/ui": "3.62.0",
+    "@payloadcms/ui": "^3.62.1",
     "next": "15.5.6",
-    "payload": "3.62.0",
+    "payload": "^3.62.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@swc/cli": "^0.7.8",
-    "@swc/core": "^1.14.0",
+    "@swc/cli": "^0.7.9",
+    "@swc/core": "^1.15.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "copyfiles": "2.4.1",
