--- a/pages/package.json
+++ b/pages/package.json
@@ -35,15 +35,15 @@
     "qs-esm": "^7.0.2"
   },
   "peerDependencies": {
-    "@payloadcms/ui": "3.62.0",
+    "@payloadcms/ui": "^3.62.1",
     "next": "15.5.6",
-    "payload": "3.62.0",
+    "payload": "^3.62.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@swc/cli": "^0.7.8",
-    "@swc/core": "^1.14.0",
+    "@swc/cli": "^0.7.9",
+    "@swc/core": "^1.15.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "copyfiles": "2.4.1",
