--- a/seo/package.json
+++ b/seo/package.json
@@ -23,22 +23,22 @@
     "prepublish": "tsc"
   },
   "dependencies": {
-    "openai": "^4.76.0"
+    "openai": "^6.8.1"
   },
   "peerDependencies": {
-    "next": "15.0.0",
     "@payloadcms/plugin-seo": "^3.5.0",
     "@payloadcms/richtext-lexical": "^3.5.0",
     "@payloadcms/ui": "^3.5.0",
+    "next": "15.5.6",
     "payload": "^3.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "typescript": "5.7.2",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "prettier": "^3.6.2"
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "prettier": "^3.6.2",
+    "typescript": "5.9.3"
   },
   "files": [
     "dist"
